Java 9 compatibility. (#81)
Deprecated features:

* javac -source and -target value of 1.6 (suppress with -Xlint:-options)
* Class.newInstance (use Constructor.newInstance)
* Object.finalize (refactor DbAdaptorTemplate to match DB connector)
* new Boolean(String) (use Boolean.valueOf(String))
* java.util.Observable and java.util.Observer (delete unused code)
* javax.security.cert.X509Certificate (use @Deprecated and avoid import)

Java EE features:

* Add --add-modules java.xml.bind; also requires Ant 1.9.4 or later

Behaviorial changes:

* XML whitespace changes (delete leading whitespace in tests)
* javadoc HTML errors (fix entity typo and h2/h3 mixup)