@@ -33,6 +33,12 @@
   <property name="adaptor.args" value=""/>
   <property name="cobertura.dir" value="${basedir}/../cobertura/"/>
 
+  <!-- Use add-modules with Java 9 and higher. -->
+  <condition property="java.modules"
+      value="" else="--add-modules java.xml.bind">
+    <matches string="${ant.java.version}" pattern="^1\.[678]$"/>
+  </condition>
+
   <path id="adaptorlib.build.classpath">
     <fileset dir="${lib.dir}">
       <include name="json_simple-1.1.jar"/>
@@ -140,7 +146,9 @@
     <javac srcdir="${src.dir}" destdir="${build-src.dir}" debug="true"
       includeantruntime="false" encoding="utf-8"
       target="${compile.java.version}" source="${compile.java.version}">
-      <compilerarg line="-Xlint -Xlint:-path -Xlint:-serial -Xlint:-rawtypes"/>
+      <compilerarg value="-Xlint"/>
+      <compilerarg
+          line="-Xlint:-path -Xlint:-serial -Xlint:-rawtypes -Xlint:-options"/>
       <bootclasspath path="${compile.java.bootclasspath}"/>
       <classpath refid="adaptorlib.build.classpath"/>
       <exclude name="${adaptor.pkg.dir}/examples/**"/>
@@ -152,7 +160,7 @@
     <javac srcdir="${src.dir}" destdir="${build-src.dir}" debug="true"
            includeantruntime="false" encoding="utf-8"
            target="${compile.java.version}" source="${compile.java.version}">
-      <compilerarg line="-Xlint -Xlint:-path -Xlint:-serial"/>
+      <compilerarg line="-Xlint -Xlint:-path -Xlint:-serial -Xlint:-options"/>
       <bootclasspath path="${compile.java.bootclasspath}"/>
       <classpath refid="examples.build.classpath"/>
       <include name="${adaptor.pkg.dir}/examples/**"/>
@@ -163,7 +171,7 @@
     <javac srcdir="${lib.dir}" destdir="${build-test.dir}" debug="true"
            includeantruntime="true" encoding="utf-8"
            target="${compile.java.version}" source="${compile.java.version}">
-      <compilerarg line="-Xlint -Xlint:-path -Xlint:-serial"/>
+      <compilerarg line="-Xlint -Xlint:-path -Xlint:-serial -Xlint:-options"/>
       <bootclasspath path="${compile.java.bootclasspath}"/>
       <classpath refid="junit.classpath"/>
       <include name="JUnitLogFixFormatter.java"/>
@@ -173,7 +181,9 @@
     <javac srcdir="${test.dir}" destdir="${build-test.dir}" debug="true"
            includeantruntime="false" encoding="utf-8"
            target="${compile.java.version}" source="${compile.java.version}">
-      <compilerarg line="-Xlint -Xlint:-path -Xlint:-serial -Xlint:-rawtypes"/>
+      <compilerarg value="-Xlint"/>
+      <compilerarg
+          line="-Xlint:-path -Xlint:-serial -Xlint:-rawtypes -Xlint:-options"/>
       <bootclasspath path="${compile.java.bootclasspath}"/>
       <classpath refid="adaptorlib.build.classpath"/>
       <classpath location="${build-src.dir}"/>
@@ -186,7 +196,7 @@
     <javac srcdir="${test.dir}" destdir="${build-test.dir}" debug="true"
            includeantruntime="false" encoding="utf-8"
            target="${compile.java.version}" source="${compile.java.version}">
-      <compilerarg line="-Xlint -Xlint:-path -Xlint:-serial"/>
+      <compilerarg line="-Xlint -Xlint:-path -Xlint:-serial -Xlint:-options"/>
       <bootclasspath path="${compile.java.bootclasspath}"/>
       <classpath refid="examples.build.classpath"/>
       <classpath location="${build-src.dir}"/>
@@ -198,7 +208,7 @@
     <javac srcdir="${src.dir}" destdir="${build-src.dir}" debug="true"
            includeantruntime="false" encoding="utf-8"
            target="${compile.java.version}" source="${compile.java.version}">
-      <compilerarg line="-Xlint -Xlint:-path -Xlint:-serial"/>
+      <compilerarg line="-Xlint -Xlint:-path -Xlint:-serial -Xlint:-options"/>
       <bootclasspath path="${compile.java.bootclasspath}"/>
       <classpath refid="adaptorlib.build.classpath"/>
       <classpath location="${lib.dir}/commons-fileupload-1.3.jar"/>
@@ -209,7 +219,7 @@
     <javac srcdir="${test.dir}" destdir="${build-test.dir}" debug="true"
            includeantruntime="false" encoding="utf-8"
            target="${compile.java.version}" source="${compile.java.version}">
-      <compilerarg line="-Xlint -Xlint:-path -Xlint:-serial"/>
+      <compilerarg line="-Xlint -Xlint:-path -Xlint:-serial -Xlint:-options"/>
       <bootclasspath path="${compile.java.bootclasspath}"/>
       <classpath refid="adaptorlib.build.classpath"/>
       <classpath location="${build-src.dir}"/>
@@ -405,6 +415,7 @@
       <link href="http://download.oracle.com/javase/6/docs/jre/api/net/httpserver/spec/"/>
       <link href="http://download.oracle.com/javase/6/docs/api/"/>
       <link href="http://commons.apache.org/proper/commons-daemon/apidocs/"/>
+      <arg line="${java.modules}"/>
       <arg value="-quiet"/>
       <arg value="-notimestamp"/>
     </javadoc>
@@ -417,6 +428,7 @@
 
   <target name="run" depends="build" description="Run default adaptor">
     <java classpath="${build-src.dir}" fork="true" classname="${adaptor.class}">
+      <jvmarg line="${java.modules}"/>
       <classpath refid="adaptorlib.run.classpath"/>
       <sysproperty key="java.util.logging.config.file"
         value="logging.properties"/>
@@ -433,6 +445,7 @@
   <target name="groups_writer" depends="build" description="Run groups writer">
     <java classpath="${build-src.dir}" fork="true"
       classname="${adaptor.pkg.name}.examples.GroupDefinitionsWriter">
+      <jvmarg line="${java.modules}"/>
       <classpath refid="adaptorlib.run.classpath"/>
       <sysproperty key="java.util.logging.config.file"
         value="logging.properties"/>
@@ -450,6 +463,7 @@
       description="Run groups from csv">
     <java classpath="${build-src.dir}" fork="true"
       classname="${adaptor.pkg.name}.examples.GroupDefinitionsFromCsv">
+      <jvmarg line="${java.modules}"/>
       <classpath refid="adaptorlib.run.classpath"/>
       <sysproperty key="java.util.logging.config.file"
         value="logging.properties"/>
@@ -467,6 +481,7 @@
       description="Run groups scale tester">
     <java classpath="${build-src.dir}" fork="true"
       classname="${adaptor.pkg.name}.examples.GroupDefinitionsScaleTester">
+      <jvmarg line="${java.modules}"/>
       <classpath refid="adaptorlib.run.classpath"/>
       <sysproperty key="java.util.logging.config.file"
         value="logging.properties"/>
@@ -496,6 +511,7 @@
   <target name="test" depends="build" description="Run JUnit tests">
     <junit printsummary="yes" haltonfailure="yes" forkmode="once" fork="true"
       dir="${basedir}" maxmemory="512m">
+      <jvmarg line="${java.modules}"/>
       <sysproperty key="net.sourceforge.cobertura.datafile"
         file="${build-instrument.dir}/cobertura.ser"/>
       <classpath refid="adaptorlib.run.classpath"/>
